commit links fix

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./ css/index.css" />
+    <link rel="stylesheet" href="/style/style.css" />
     <title>kotovskyi_pavlo</title>
   </head>
   <body>
     <header>
-      <a class="language" href="./ua.html">UA</a>
+      <a class="language" href="/pages/uk.html">UA</a>
       <img class="avatar" src="./images/IMG_4116.JPG" alt="My avatar" />
       <h2 class="nickname">kotovskyi_pavlo</h2>
     </header>
