--- a/pages/uk.html
+++ b/pages/uk.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="/style/style.css">
     <title>kotovskyi_pavlo</title>
 </head>
 
 <body>
     <header>
-        <a class="language" href="./index.html">EN</a>
+        <a class="language" href="/index.html">EN</a>
         <img class="avatar" src="./images/IMG_4116.JPG" alt="Мій аватар" />
         <h2 class="nickname">kotovskyi_pavlo</h2>
     </header>
