--- a/pages/uk.html
+++ b/pages/uk.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a class="language" href="/index.html">EN</a>
-        <img class="avatar" src="./images/IMG_4116.JPG" alt="Мій аватар" />
+        <img class="avatar" src="/images/IMG_6808.JPG" alt="Мій аватар" />
         <h2 class="nickname">kotovskyi_pavlo</h2>
     </header>
     <main>
@@ -19,10 +19,10 @@
         <p class="description text">Фронтенд розробник</p>
         <ul class="links">
             <li><a href="https://github.com/kotovskyi07?tab=repositories" target="_blank">
-                    <img src="./images/4202098_github_code_developer_logo_icon.svg" alt="GitHub link">
+                    <img src="/images/4202098_github_code_developer_logo_icon.svg" alt="GitHub link">
                 </a></li>
             <li><a href="https://www.instagram.com/p.kotovskyi/" target="_blank">
-                    <img src="./images/8726142_instagram_icon.svg" alt="Instagram link">
+                    <img src="/images/8726142_instagram_icon.svg" alt="Instagram link">
                 </a></li>
         </ul>
         <a class="large-button" href="mailto: kotovskyi.p@gmail.com">Написати емайл</a>
