--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <a class="language" href="/pages/uk.html">UA</a>
-      <img class="avatar" src="./images/IMG_4116.JPG" alt="My avatar" />
+      <img class="avatar" src="/images/IMG_6808.JPG" alt="My avatar" />
       <h2 class="nickname">kotovskyi_pavlo</h2>
     </header>
     <main>
@@ -22,7 +22,7 @@
             target="_blank"
           >
             <img
-              src="./images/4202098_github_code_developer_logo_icon.svg"
+              src="/images/4202098_github_code_developer_logo_icon.svg"
               alt="GitHub link"
             />
           </a>
@@ -30,7 +30,7 @@
         <li>
           <a href="https://www.instagram.com/p.kotovskyi/" target="_blank">
             <img
-              src="./images/8726142_instagram_icon.svg"
+              src="/images/8726142_instagram_icon.svg"
               alt="Instagram link"
             />
           </a>
